--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <center>
   <head>
-    <title>DS Codetantra</title>
+    <title>DS Codetantra Material</title>
   </head>
   <body>
     <h1>DS</h1>
@@ -9,4 +10,6 @@
   </body>
 </html>
 <h1> <a href="sircode.html">code to access</a> </h1>
-
+<p>By <a href="https://www.linkedin.com/in/varma59/">G V S Abhishek Varma</a></p>
+<h2>Under MIT License <br> &copy; G V S Abhishek Varma</h2>
+</center>
