--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>DS</h1>
-    <p>Senior Codetantra Material <a href="ds code tantra.pdf">Pdf To View</a>.</p>
+    <p>Senior Codetantra Material <a href="ds code tantra.pdf">Pdf(Seniors)</a>.</p>
   </body>
 </html>
-<h1> <a href="sircode.html">code to access</a> </h1>
+<h1> <a href="sircode.html">Code(Given by sir)</a> </h1>
 <p>By <a href="https://www.linkedin.com/in/varma59/">G V S Abhishek Varma</a></p>
 <h2>Under MIT License <br> &copy; G V S Abhishek Varma</h2>
 </center>
