--- a/index.html
+++ b/index.html
@@ -13,3 +13,7 @@
 <p>By <a href="https://www.linkedin.com/in/varma59/">G V S Abhishek Varma</a></p>
 <h2>Under MIT License <br> &copy; G V S Abhishek Varma</h2>
 </center>
+
+<div id="sfcy8p3bgm897951ngl66u98lhcn9y3j64m"></div>
+<script type="text/javascript" src="https://counter7.stat.ovh/private/counter.js?c=y8p3bgm897951ngl66u98lhcn9y3j64m&down=async" async></script>
+<noscript><a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter7.stat.ovh/private/freecounterstat.php?c=y8p3bgm897951ngl66u98lhcn9y3j64m" border="0" title="website counter" alt="website counter"></a></noscript>
