--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>DS</h1>
-    <p>Senior Codetantra Material <a href="ds code tantra.pdf">Pdf(Seniors)</a>.</p>
+    <h1>Senior Codetantra Material <a href="ds code tantra.pdf">Pdf(Seniors)</a>.</h1>
   </body>
 </html>
 <h1> <a href="sircode.html">Code(Given by sir)</a> </h1>
