--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <h2>Under MIT License <br> &copy; G V S Abhishek Varma</h2>
 </center>
 
-<div id="sfcy8p3bgm897951ngl66u98lhcn9y3j64m"></div>
-<script type="text/javascript" src="https://counter7.stat.ovh/private/counter.js?c=y8p3bgm897951ngl66u98lhcn9y3j64m&down=async" async></script>
-<noscript><a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter7.stat.ovh/private/freecounterstat.php?c=y8p3bgm897951ngl66u98lhcn9y3j64m" border="0" title="website counter" alt="website counter"></a></noscript>
+<center>
+   <a href='https://bachelorthesiswritingservice.com/'>https://bachelorthesiswritingservice.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2988c31e63f9dd419e97e27a30627d0641ce4c44'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/892415/t/0"></script>
+</center> 
