--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </center>
 
 <center>
-   <a href='https://bachelorthesiswritingservice.com/'>https://bachelorthesiswritingservice.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2988c31e63f9dd419e97e27a30627d0641ce4c44'></script>
+   <a href='https://varma59.github.io/'>https://varma59.github.io/</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2988c31e63f9dd419e97e27a30627d0641ce4c44'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/892415/t/0"></script>
 </center> 
