--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </center>
 
 <center>
-   <a href='https://varma59.github.io/'>https://varma59.github.io/</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2988c31e63f9dd419e97e27a30627d0641ce4c44'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/892415/t/0"></script>
+   <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7908136&style=0001&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>     
 </center> 
