--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </body>
 </html>
 <h1> <a href="sircode.html">Code(Given by sir)</a> </h1>
-<p>By <a href="https://www.linkedin.com/in/varma59/">G V S Abhishek Varma</a></p>
-<h2>Under MIT License <br> &copy; G V S Abhishek Varma</h2>
+<h2>Under MIT License <br> &copy;<a href="https://www.linkedin.com/in/varma59/">G V S Abhishek Varma</a></h2>
 </center>
 
 <center>
