--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>DS</h1>
-    <h1>Senior Codetantra Material <a href="20331A0564_compressed.pdf">Pdf(2021>.</h1>
+    <h1>Senior Codetantra Material <a href="20331A0564_compressed.pdf">Pdf(2021)>.</h1>
   </body>
 </html>
 <h1> <a href="sircode.html">Code(Given by sir)</a> </h1>
