--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <center>
   <head>
     <title>DS Codetantra Material</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <h1>DS</h1>
