--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>DS</h1>
-    <h1>DS 2021 <a href="20331A0564_compressed.pdf">Pdf(2021)</h1>
+    <h1>DS 2021 <a href="ds code tantra (1)-compressed.pdf">Pdf(2021)</h1>
       <h1><a href="ds code tantra (1)-compressed.pdf">Seniors</h1>
   </body>
 </html>
