--- a/index.html
+++ b/index.html
@@ -20,3 +20,6 @@
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7908136&style=0001&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>     
 </center> 
+    <center>
+      <h3>Snakify<a href="pyrecord.pdf">Snakify Pdf(2021)</h3>
+        <h3>PY Questions<a href="labQ.pdf">Py questions(2021)</h3>
