--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
 <img src="https://hitwebcounter.com/counter/counter.php?page=7908136&style=0001&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>     
 </center> 
     <center>
-      <h3>Snakify<a href="pyrecord.pdf">Snakify Pdf(2021)</h3>
-        <h3>PY Questions<a href="labQ.pdf">Py questions(2021)</h3>
+      <h3><a href="pyrecord1.pdf">Final python</h3>
+        <h3><a href="labQ.pdf">Py questions(2021)</h3>
