--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>DS</h1>
     <h1>DS 2021 <a href="ds code tantra (1)-compressed.pdf">Pdf(2021)</h1>
       <h1><a href="ds code tantra (1)-compressed.pdf">Seniors</h1>
+        <h1>DS 2021 <a href="DS Record-min.pdf">Pdfforexam</h1>
   </body>
 </html>
 <h1> <a href="sircode.html">Code(Given by sir)</a> </h1>
