--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <center>
   <head>
-    <title>DS Codetantra Material</title>
+    <title>DS Material</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
