--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <h1><a href="ds code tantra (1)-compressed.pdf">Seniors</h1>
         <br>
         <h1><a href="DS Record-min.pdf">Pdfforexam</h1>
+          <h1><a href="https://www.editpad.org/">texteditor</h1>
   </body>
 </html>
 <h1> <a href="sircode.html">Code(Given by sir)</a> </h1>
