--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </body>
 </html>
 <h1> <a href="sircode.html">Code(Given by sir)</a> </h1>
+        <h1> <a href="https://abhistaticwebsite.z29.web.core.windows.net/">alternative</a> </h1>
 </center>
 <center>
    <!-- hitwebcounter Code START -->
