--- a/index.html
+++ b/index.html
@@ -23,3 +23,5 @@
     <center>
       <h3><a href="pyrecord1.pdf">Final python</h3>
         <h3><a href="labQ.pdf">Py questions(2021)</h3>
+          <h3><a href="pwp complete record_organized.pdf">pypdf</h3>
+            <h3><a href="pwp record.pdf">pypdf2</h3>
